# tree-sitter-lite-lisp

./: .gitignore  CMakeLists.txt  LICENSE  README.org  binding.gyp  grammar.js  package.json
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
